--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "jodit-react": "^1.3.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-easy-crop": "^4.2.0",
     "react-helmet": "^6.1.0",
+    "react-image-crop": "^10.0.1",
     "react-js-pagination": "^3.0.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
